更新 创建会话 提问问题 无法解析为 简语   创建钱包 DBC 改 DGC 通过邀请连接的注册 隐藏 邀请输入框  连接节点文案修改

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -338,7 +338,9 @@
   "Name Tag": "Namen-Tag",
   "Name your modelfile": "Benennen Sie Ihre Modell-Datei",
   "NEW DBC WALLET": "NEUER DBC-WALLET",
+  "NEW DGC WALLET": "NEUER DGC-WALLET",
   "New Password": "Neues Passwort",
+  "Password must be at least 8 characters long.": "Das Passwort muss mindestens 8 Zeichen lang sein.",
   "No results found": "Keine Ergebnisse gefunden",
   "No source available": "Kein Quelle verfügbar",
   "Not factually correct": "Faktisch nicht korrekt",
@@ -656,6 +658,8 @@
   "Wallet Adress": "Wallet-Adresse",
   "Your kyc rewards have not been credited.": "Ihre KYC-Belohnungen wurden noch nicht gutgeschrieben.",
   "Region": "Region",
+  "Connected to": "Mit verbunden",
+  "node": "Knoten",
   "Region Setting": "Regionseinstellung",
   "America": "Amerika",
   "Singapore": "Singapur",
