--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -338,7 +338,9 @@
   "Name Tag": "",
   "Name your modelfile": "",
   "NEW DBC WALLET": "",
+  "NEW DGC WALLET": "",
   "New Password": "",
+  "Password must be at least 8 characters long.":"",
   "No results found": "",
   "No source available": "",
   "Not factually correct": "",
@@ -656,6 +658,8 @@
   "Wallet Adress": "",
   "Your kyc rewards have not been credited.": "",
   "Region": "",
+  "Connected to": "",
+  "node": "",
   "Region Setting": "",
   "America": "",
   "Singapore": "",
