--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -338,7 +338,9 @@
   "Name Tag": "Etiqueta de nombre",
   "Name your modelfile": "Nombre tu archivo de modelo",
   "NEW DBC WALLET": "NUEVO BILLETERA DBC",
+  "NEW DGC WALLET": "NUEVO BILLETERA DGC",
   "New Password": "Nueva contraseña",
+  "Password must be at least 8 characters long.": "La contraseña debe tener al menos 8 caracteres de longitud.",
   "No results found": "No se encontraron resultados",
   "No source available": "No hay fuente disponible",
   "Not factually correct": "No es correcto en términos de hechos",
@@ -656,6 +658,8 @@
   "Wallet Adress": "Dirección de billetera",
   "Your kyc rewards have not been credited.": "Sus recompensas de KYC no han sido acreditadas.",
   "Region": "Región",
+  "Connected to": "Conectado a",
+  "node": "nodo",
   "Region Setting": "Configuración de la región",
   "America": "América",
   "Singapore": "Singapur",
