--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -337,7 +337,9 @@
   "Name Tag": "Tag de nom",
   "Name your modelfile": "Nommez votre fichier de modèle",
   "NEW DBC WALLET": "NOUVEAU PORTFEUILLE DBC",
+  "NEW DGC WALLET": "NOUVEAU PORTFEUILLE DGC",
   "New Password": "Nouveau mot de passe",
+  "Password must be at least 8 characters long.": "Le mot de passe doit avoir au moins 8 caractères de longueur.",
   "No results found": "Aucun résultat trouvé",
   "No source available": "Aucune source disponible",
   "Not factually correct": "Pas correct du point de vue des faits",
@@ -655,6 +657,8 @@
   "Wallet Adress": "Adresse de portefeuille",
   "Your kyc rewards have not been credited.": "Vos récompenses KYC n'ont pas été créditées.",
   "Region": "Région",
+  "Connected to": "Connecté à",
+  "node": "nœud",
   "Region Setting": "Paramètres de région",
   "America": "Amérique",
   "Singapore": "Singapour",
