--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -338,7 +338,9 @@
   "Name Tag": "Tag Nama",
   "Name your modelfile": "Nama file model Anda",
   "NEW DBC WALLET": "DOMPET DBC BARU",
+  "NEW DGC WALLET": "DOMPET DGC BARU",
   "New Password": "Kata Sandi Baru",
+  "Password must be at least 8 characters long.": "Kata sandi harus memiliki setidaknya 8 karakter panjang.",
   "No results found": "Hasil tidak ditemukan",
   "No source available": "Sumber tidak tersedia",
   "Not factually correct": "Tidak benar secara faktual",
@@ -656,6 +658,8 @@
   "Wallet Adress": "Alamat Dompet",
   "Your kyc rewards have not been credited.": "Hadiah KYC Anda belum dikreditkan.",
   "Region": "Wilayah",
+  "Connected to": "Terhubung ke",
+  "node": "simpul",
   "Region Setting": "Pengaturan Wilayah",
   "America": "Amerika",
   "Singapore": "Singapura",
