--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -339,7 +339,9 @@
   "Name Tag": "名前タグ",
   "Name your modelfile": "あなたのモデルファイルに名前を付ける",
   "NEW DBC WALLET": "新しいDBCウォレット",
+  "NEW DGC WALLET": "新しいDGCウォレット",
   "New Password": "新しいパスワード",
+  "Password must be at least 8 characters long.": "パスワードは少なくとも 8 文字以上でなければなりません。",
   "No results found": "結果が見つかりません",
   "No source available": "ソースが利用できません",
   "Not factually correct": "事実的に正しくない",
@@ -656,6 +658,8 @@
   "Wallet Adress": "ウォレットアドレス",
   "Your kyc rewards have not been credited.": "あなたの KYC ほうしゅう はまだクレジットされていません。",
   "Region": "ちいき",
+  "Connected to": "接続先",
+  "node": "ノード",
   "Region Setting": "ちいきせってい",
   "America": "アメリカ",
   "Singapore": "シンガポール",
