--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -338,7 +338,9 @@
   "Name Tag": "Tag de nome",
   "Name your modelfile": "Nomeie o seu arquivo de modelo",
   "NEW DBC WALLET": "NOVO BOLSO DBC",
+  "NEW DGC WALLET": "NOVO BOLSO DGC",
   "New Password": "Nova senha",
+  "Password must be at least 8 characters long.": "A senha deve ter pelo menos 8 caracteres de comprimento.",
   "No results found": "Nenhum resultado encontrado",
   "No source available": "Nenhuma fonte disponível",
   "Not factually correct": "Não é corretamente verdadeiro",
@@ -656,6 +658,8 @@
   "Wallet Adress": "Endereço da carteira",
   "Your kyc rewards have not been credited.": "Suas recompensas KYC ainda não foram creditadas.",
   "Region": "Região",
+  "Connected to": "Conectado a",
+  "node": "nó",
   "Region Setting": "Configuração da região",
   "America": "América",
   "Singapore": "Cingapura",
