--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -337,7 +337,9 @@
   "Name Tag": "Тег имени",
   "Name your modelfile": "Назвать свой файл модели",
   "NEW DBC WALLET": "Новый кошелек DBC",
+  "NEW DGC WALLET": "Новый кошелек DGC",
   "New Password": "Новый пароль",
+  "Password must be at least 8 characters long.": "Пароль должен состоять как минимум из 8 символов.",
   "No results found": "Результаты не найдены",
   "No source available": "Источник недоступен",
   "Not factually correct": "Не соответствует фактам",
@@ -655,6 +657,8 @@
   "Wallet Adress": "Адрес кошелька",
   "Your kyc rewards have not been credited.": "Ваши вознаграждения за KYC еще не были зачислены.",
   "Region": "Регион",
+  "Connected to": "Подключено к",
+  "node": "узел",
   "Region Setting": "Настройка региона",
   "America": "Америка",
   "Singapore": "Сингапур",
