--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -338,7 +338,9 @@
   "Name Tag": "แท็กชื่อ",
   "Name your modelfile": "ตั้งชื่อไฟล์โมเดลของคุณ",
   "NEW DBC WALLET": "กระเป๋าเงิน DBC ใหม่",
+  "NEW DGC WALLET": "กระเป๋าเงิน DGC ใหม่",
   "New Password": "รหัสผ่านใหม่",
+  "Password must be at least 8 characters long.": "รหัสผ่านต้องมีความยาวอย่างน้อย 8 ตัวอักษร",
   "No results found": "ไม่พบผลลัพธ์",
   "No source available": "ไม่มีแหล่งที่มา",
   "Not factually correct": "ไม่ถูกต้องตามความเป็นจริง",
@@ -655,6 +657,8 @@
   "Wallet Adress": "ที่อยู่กระเป๋าเงิน",
   "Your kyc rewards have not been credited.": "รางวัล KYC ของคุณยังไม่ได้รับการบันทึกเครดิต",
   "Region": "ภูมิภาค",
+  "Connected to": "เชื่อมต่อกับ",
+  "node": "โหนด",
   "Region Setting": "การตั้งค่าภูมิภาค",
   "America": "อเมริกา",
   "Singapore": "สิงคโปร์",
