--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -338,7 +338,9 @@
   "Name Tag": "Ad Etiket",
   "Name your modelfile": "Model dosyanızın adını ver",
   "NEW DBC WALLET": "Yeni DBC Cüzdanı",
+  "NEW DGC WALLET": "Yeni DGC Cüzdanı",
   "New Password": "Yeni Şifre",
+  "Password must be at least 8 characters long.": "Parola en az 8 karakter uzunluğunda olmalıdır.",
   "No results found": "Sonuç bulunamadı",
   "No source available": "Kaynak bulunamadı",
   "Not factually correct": "Gerçekten doğru değil",
@@ -656,6 +658,8 @@
   "Wallet Adress": "Cüzdan Adresi",
   "Your kyc rewards have not been credited.": "KYC ödülleriniz henüz kredilere eklenmedi.",
   "Region": "Bölge",
+  "Connected to": "Bağlı olan",
+  "node": "düğüm",
   "Region Setting": "Bölge Ayarları",
   "America": "Amerika",
   "Singapore": "Singapur",
