--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -338,7 +338,9 @@
   "Name Tag": "Thẻ tên",
   "Name your modelfile": "Đặt tên cho tệp mô hình của bạn",
   "NEW DBC WALLET": "Ví DBC mới",
+  "NEW DGC WALLET": "Ví DGC mới",
   "New Password": "Mật khẩu mới",
+  "Password must be at least 8 characters long.": "Mật khẩu phải có ít nhất 8 ký tự dài.",
   "No results found": "Không tìm thấy kết quả",
   "No source available": "Không có nguồn có sẵn",
   "Not factually correct": "Không chính xác về thực tế",
@@ -656,6 +658,8 @@
   "Wallet Adress": "Địa chỉ ví",
   "Your kyc rewards have not been credited.": "Các phần thưởng KYC của bạn vẫn chưa được ghi vào tài khoản.",
   "Region": "Vùng",
+  "Connected to": "Kết nối với",
+  "node": "nút",
   "Region Setting": "Cài đặt vùng",
   "America": "Mỹ",
   "Singapore": "Singapore",
