--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -349,7 +349,9 @@
   "Name your modelfile": "为你的模型文件命名",
   "New Chat": "新建聊天",
   "NEW DBC WALLET": "新的 DBC 钱包",
+  "NEW DGC WALLET": "新的 DGC 钱包",
   "New Password": "新密码",
+  "Password must be at least 8 characters long.": "密码必须至少 8 个字符长。",
   "No results found": "未找到结果",
   "No source available": "无可用来源",
   "Not factually correct": "与事实不符",
@@ -655,6 +657,8 @@
   "Wallet Adress": "钱包地址",
   "Your kyc rewards have not been credited.": "您的 KYC 奖励未到账",
   "Region": "地区",
+  "Connected to": "已连接到",
+  "node": "节点",
   "Region Setting": "地区设置",
   "America": "美国",
   "Singapore": "新加坡",
