--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -338,7 +338,9 @@
   "Name Tag": "이름 태그",
   "Name your modelfile": "모델 파일에 이름을 붙이세요",
   "NEW DBC WALLET": "새로운 DBC 지갑",
+  "NEW DGC WALLET": "새로운 DGC 지갑",
   "New Password": "새로운 비밀번호",
+  "Password must be at least 8 characters long.": "비밀번호는 적어도 8자 이상이어야 합니다.",
   "No results found": "결과를 찾을 수 없음",
   "No source available": "소스가 없음",
   "Not factually correct": "사실적으로 정확하지 않음",
@@ -656,6 +658,8 @@
   "Wallet Adress": "지갑 주소",
   "Your kyc rewards have not been credited.": "당신의 KYC 보상은 아직 크레딧 처리되지 않았습니다.",
   "Region": "지역",
+  "Connected to": "연결된",
+  "node": "노드",
   "Region Setting": "지역 설정",
   "America": "미국",
   "Singapore": "싱가포르",
