更新二维码 提示 语 国际化

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -657,6 +657,9 @@
   "INFO": "Information",
   "Wallet Adress": "Wallet-Adresse",
   "Your kyc rewards have not been credited.": "Ihre KYC-Belohnungen wurden noch nicht gutgeschrieben.",
+  "Please use your mobile phone to scan the QR code below for identity verification": "Bitte verwenden Sie Ihr Mobiltelefon, um den unten stehenden QR-Code zur Identitätsverifikation zu scannen.",
+  "Preparing to switch to the face verification page": "Vorbereitung zum Wechsel auf die Gesichtserkennungsüberprüfungsseite.",
+  "QR code is valid for 5 minutes": "Der QR-Code ist 5 Minuten lang gültig.",
   "Region": "Region",
   "Connected to": "Mit verbunden",
   "node": "Knoten",
