--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -657,6 +657,9 @@
   "INFO": "",
   "Wallet Adress": "",
   "Your kyc rewards have not been credited.": "",
+  "Please use your mobile phone to scan the QR code below for identity verification": "",
+  "Preparing to switch to the face verification page": "",
+  "QR code is valid for 5 minutes": "",
   "Region": "",
   "Connected to": "",
   "node": "",
