--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -656,6 +656,9 @@
   "INFO": "Information",
   "Wallet Adress": "Adresse de portefeuille",
   "Your kyc rewards have not been credited.": "Vos récompenses KYC n'ont pas été créditées.",
+  "Please use your mobile phone to scan the QR code below for identity verification": "Veuillez utiliser votre téléphone portable pour scanner le code QR ci-dessous pour la vérification d'identité.",
+  "Preparing to switch to the face verification page": "Préparer à passer à la page de vérification faciale.",
+  "QR code is valid for 5 minutes": "Le code QR est valide pendant 5 minutes.",
   "Region": "Région",
   "Connected to": "Connecté à",
   "node": "nœud",
