--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -657,6 +657,9 @@
   "INFO": "Informasi",
   "Wallet Adress": "Alamat Dompet",
   "Your kyc rewards have not been credited.": "Hadiah KYC Anda belum dikreditkan.",
+  "Please use your mobile phone to scan the QR code below for identity verification": "Silakan gunakan ponsel Anda untuk menycan kode QR di bawah ini untuk verifikasi identitas.",
+  "Preparing to switch to the face verification page": "Sedang menyiapkan untuk beralih ke halaman verifikasi wajah.",
+  "QR code is valid for 5 minutes": "Kode QR berlaku selama 5 menit.",
   "Region": "Wilayah",
   "Connected to": "Terhubung ke",
   "node": "simpul",
