--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -656,6 +656,9 @@
   "INFO": "Информация",
   "Wallet Adress": "Адрес кошелька",
   "Your kyc rewards have not been credited.": "Ваши вознаграждения за KYC еще не были зачислены.",
+  "Please use your mobile phone to scan the QR code below for identity verification": "Пожалуйста, используйте свой мобильный телефон для сканирования QR-кода ниже для проверки идентификации.",
+  "Preparing to switch to the face verification page": "Подготовка к переходу на страницу верификации лиц.",
+  "QR code is valid for 5 minutes": "QR-код действителен на 5 минут.",
   "Region": "Регион",
   "Connected to": "Подключено к",
   "node": "узел",
