--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -656,6 +656,9 @@
   "INFO": "ข้อมูล",
   "Wallet Adress": "ที่อยู่กระเป๋าเงิน",
   "Your kyc rewards have not been credited.": "รางวัล KYC ของคุณยังไม่ได้รับการบันทึกเครดิต",
+  "Please use your mobile phone to scan the QR code below for identity verification": "กรุณาใช้โทรศัพท์มือถือของคุณเพื่อสแกนโค้ด QR ด้านล่างเพื่อตรวจสอบตัวตน",
+  "Preparing to switch to the face verification page": "กำลังเตรียมที่จะเปลี่ยนไปที่หน้า การ ตรวจสอบใบหน้า",
+  "QR code is valid for 5 minutes": "โค้ด QR มีอายุ 5 นาที",
   "Region": "ภูมิภาค",
   "Connected to": "เชื่อมต่อกับ",
   "node": "โหนด",
