--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -656,6 +656,9 @@
   "INFO": "信息",
   "Wallet Adress": "钱包地址",
   "Your kyc rewards have not been credited.": "您的 KYC 奖励未到账",
+  "Please use your mobile phone to scan the QR code below for identity verification": "请用您的手机扫描下方二维码进行身份验证。",
+  "Preparing to switch to the face verification page": "准备切换到面部验证页面。",
+  "QR code is valid for 5 minutes": "二维码在 5 分钟内有效。",
   "Region": "地区",
   "Connected to": "已连接到",
   "node": "节点",
