更新 提示语

--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -349,7 +349,7 @@
   "Name your modelfile": "为你的模型文件命名",
   "New Chat": "新建聊天",
   "NEW DBC WALLET": "新的 DBC 钱包",
-  "NEW DGC WALLET": "新的 DGC 钱包",
+  "NEW DGC WALLET": "新建 DGC 钱包",
   "New Password": "新密码",
   "Password must be at least 8 characters long.": "密码必须至少 8 个字符长。",
   "No results found": "未找到结果",
