--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -594,6 +594,9 @@
   "Upgrade to Plus": "Auf Plus aktualisieren",
   "Upgrade to Plus failed!": "Aktualisierung auf Plus fehlgeschlagen!",
   "Upgrading": "Aktualisierung läuft",
+  "Failed to obtain authorization information.": "Die Erfassung der Autorisierungsinformationen ist fehlgeschlagen.",
+  "Authorization failed!": "Die Autorisierung ist fehlgeschlagen!",
+  "Please log in to the third party of the platform to confirm the authorization.": "Bitte melden Sie sich bei der Drittpartei der Plattform an, um die Autorisierung zu bestätigen.",
   "Wallet Address": "Wallet-Adresse",
   "Wallet Balance": "Wallet-Saldo",
   "Transfer": "Überweisung",
