--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -594,6 +594,9 @@
   "Upgrade to Plus": "",
   "Upgrade to Plus failed!": "",
   "Upgrading": "",
+  "Failed to obtain authorization information.": "",
+  "Authorization failed!": "",
+  "Please log in to the third party of the platform to confirm the authorization.": "",
   "Wallet Address": "",
   "Wallet Balance": "",
   "Transfer": "",
