--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -594,6 +594,9 @@
   "Upgrade to Plus": "Actualizar a Plus",
   "Upgrade to Plus failed!": "La actualización a Plus falló!",
   "Upgrading": "Actualizando",
+  "Failed to obtain authorization information.": "No se pudo obtener la información de autorización.",
+  "Authorization failed!": "¡La autorización ha fallado!",
+  "Please log in to the third party of the platform to confirm the authorization.": "Por favor, inicie sesión en la tercera parte de la plataforma para confirmar la autorización.",
   "Wallet Address": "Dirección de la billetera",
   "Wallet Balance": "Saldo de la billetera",
   "Transfer": "Transferencia",
