--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -593,6 +593,9 @@
   "Upgrade to Plus": "Mettre à niveau vers Plus",
   "Upgrade to Plus failed!": "La mise à niveau vers Plus a échoué!",
   "Upgrading": "Mise à niveau en cours",
+  "Failed to obtain authorization information.": "Impossible d'obtenir les informations d'autorisation.",
+  "Authorization failed!": "L'autorisation a échoué!",
+  "Please log in to the third party of the platform to confirm the authorization.": "Veuillez vous connecter au tiers de la plateforme pour confirmer l'autorisation.",
   "Wallet Address": "Adresse du portefeuille",
   "Wallet Balance": "Solde du portefeuille",
   "Transfer": "Transfert",
