--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -594,6 +594,9 @@
   "Upgrade to Plus": "Perbarui ke Plus",
   "Upgrade to Plus failed!": "Perbaruan ke Plus Gagal!",
   "Upgrading": "Sedang Perbarui",
+  "Failed to obtain authorization information.": "Gagal mendapatkan informasi otorisasi.",
+  "Authorization failed!": "Otorisasi gagal!",
+  "Please log in to the third party of the platform to confirm the authorization.": "Silakan masuk ke pihak ketiga dari platform untuk mengkonfirmasi otorisasi.",
   "Wallet Address": "Alamat Dompet",
   "Wallet Balance": "Saldo Dompet",
   "Transfer": "Transfer",
