--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -596,6 +596,9 @@
   "Upgrade to Plus": "Plus にアップグレード",
   "Upgrade to Plus failed!": "Plus にアップグレードに失敗しました！",
   "Upgrading": "アップグレード中",
+  "Failed to obtain authorization information.": "認証情報の取得に失敗しました。",
+  "Authorization failed!": "認証に失敗しました！",
+  "Please log in to the third party of the platform to confirm the authorization.": "プラットフォームのサードパーティにログインして、認可を確認してください。",
   "Wallet Address": "ウォレットアドレス",
   "Wallet Balance": "ウォレット残高",
   "Transfer": "送金",
