--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -594,6 +594,9 @@
   "Upgrade to Plus": "플러스로 업그레이드",
   "Upgrade to Plus failed!": "플러스로 업그레이드 실패!",
   "Upgrading": "업그레이드 중",
+  "Failed to obtain authorization information.": "인증 정보를 가져오는데 실패했습니다.",
+  "Authorization failed!": "인증에 실패했습니다!",
+  "Please log in to the third party of the platform to confirm the authorization.": "플랫폼의 제3자에 로그인하여 권한 승인을 확인하세요.",
   "Wallet Address": "지갑 주소",
   "Wallet Balance": "지갑 잔액",
   "Transfer": "이체",
