--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -594,6 +594,9 @@
   "Upgrade to Plus": "Atualizar para Plus",
   "Upgrade to Plus failed!": "A atualização para Plus falhou!",
   "Upgrading": "Atualizando",
+  "Failed to obtain authorization information.": "Falha ao obter informações de autorização.",
+  "Authorization failed!": "A autorização falhou!",
+  "Please log in to the third party of the platform to confirm the authorization.": "Por favor, faça login na terceira parte da plataforma para confirmar a autorização.",
   "Wallet Address": "Endereço da carteira",
   "Wallet Balance": "Saldo da carteira",
   "Transfer": "Transferir",
