--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -593,6 +593,9 @@
   "Upgrade to Plus": "Обновить до плюс",
   "Upgrade to Plus failed!": "Обновление до плюс не удалось!",
   "Upgrading": "Обновление в процессе",
+  "Failed to obtain authorization information.": "Не удалось получить информацию об авторизации.",
+  "Authorization failed!": "Авторизация не удалась!",
+  "Please log in to the third party of the platform to confirm the authorization.": "Пожалуйста, войдите на третью сторону платформы для подтверждения авторизации.",
   "Wallet Address": "Адрес кошелька",
   "Wallet Balance": "Баланс кошелька",
   "Transfer": "Перевод",
