--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -593,6 +593,9 @@
   "Upgrade to Plus": "อัปเกรดเป็น Plus",
   "Upgrade to Plus failed!": "อัปเกรดเป็น Plus ล้มเหลว!",
   "Upgrading": "กำลังอัปเกรด",
+  "Failed to obtain authorization information.": "ไม่สามารถรับข้อมูลการอนุญาตได้",
+  "Authorization failed!": "การอนุญาตล้มเหลว!",
+  "Please log in to the third party of the platform to confirm the authorization.": "กรุณาเข้าสู่ระบบของบุคคลที่สามของแพลตฟอร์มเพื่อยืนยันการอนุญาต.",
   "Wallet Address": "ที่อยู่กระเป๋าเงิน",
   "Wallet Balance": "ยอดเงินในกระเป๋าเงิน",
   "Transfer": "โอน",
