--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -594,6 +594,9 @@
   "Upgrade to Plus": "Plus'a Yükselt",
   "Upgrade to Plus failed!": "Plus'a Yükseltme Başarısız!",
   "Upgrading": "Yükseltiliyor",
+  "Failed to obtain authorization information.": "Yetkilendirme bilgilerini alamadık.",
+  "Authorization failed!": "Yetkilendirme başarısız oldu!",
+  "Please log in to the third party of the platform to confirm the authorization.": "Lütfen platformun üçüncü tarafına giriş yaparak yetkilendirmeyi onaylayın.",
   "Wallet Address": "Cüzdan Adresi",
   "Wallet Balance": "Cüzdan Bakiyesi",
   "Transfer": "Transfer",
