--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -594,6 +594,9 @@
   "Upgrade to Plus": "Nâng cấp lên Plus",
   "Upgrade to Plus failed!": "Nâng cấp lên Plus thất bại!",
   "Upgrading": "Đang nâng cấp",
+  "Failed to obtain authorization information.": "Không thể lấy thông tin ủy quyền.",
+  "Authorization failed!": "Thất bại trong ủy quyền!",
+  "Please log in to the third party of the platform to confirm the authorization.": "Vui lòng đăng nhập vào bên thứ ba của nền tảng để xác nhận ủy quyền.",
   "Wallet Address": "Địa chỉ ví",
   "Wallet Balance": "Số dư ví",
   "Transfer": "Chuyển tiền",
