--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -573,6 +573,9 @@
   "Upgrade to Plus": "升级到 Plus",
   "Upgrade to Plus failed!": "升级到 Plus 失败！",
   "Upgrading": "正在升级",
+  "Failed to obtain authorization information.": "获取授权信息失败。",
+  "Authorization failed!": "授权失败！",
+  "Please log in to the third party of the platform to confirm the authorization.": "请前往登录平台的第三方进行确认授权。",
   "Upload a GGUF model": "上传一个 GGUF 模型",
   "Upload files": "上传文件",
   "Upload Progress": "上传进度",
